--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "dev": "webpack-dev-server --open",
     "build": "webpack --config webpack.prod.js",
-    "eslint": "eslint ./lib --fix"
+    "eslint": "eslint ./lib --fix",
+    "test": "istanbul cover ./node_modules/.bin/_mocha"
   },
   "keywords": [],
   "author": "",
@@ -48,7 +49,10 @@
     "webpack-merge": "^4.2.2"
   },
   "devDependencies": {
+    "assert": "^2.0.0",
+    "chai": "^4.2.0",
     "glob-all": "^3.1.0",
+    "istanbul": "^0.4.5",
     "mocha": "^7.1.0",
     "rimraf": "^3.0.2"
   }
