chore: add validate-commit-msg

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "echo \"this should fail\" && exit 1",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+      "commit-msg": "validate-commit-msg",
+      "pre-commit": "echo \"this should fail\" && exit 1"
     }
   },
   "keywords": [],
@@ -61,6 +61,7 @@
     "husky": "^4.2.3",
     "istanbul": "^0.4.5",
     "mocha": "^7.1.0",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "validate-commit-msg": "^2.14.0"
   }
 }
