--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev": "webpack-dev-server --open",
     "build": "webpack --config webpack.prod.js",
     "eslint": "eslint ./lib --fix",
-    "test": "istanbul cover ./node_modules/.bin/_mocha"
+    "test": "istanbul cover ./node_modules/.bin/_mocha",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0"
   },
   "husky": {
     "hooks": {
@@ -57,6 +58,7 @@
   "devDependencies": {
     "assert": "^2.0.0",
     "chai": "^4.2.0",
+    "conventional-changelog": "^3.1.18",
     "glob-all": "^3.1.0",
     "husky": "^4.2.3",
     "istanbul": "^0.4.5",
