--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "assert": "^2.0.0",
     "chai": "^4.2.0",
     "conventional-changelog": "^3.1.18",
+    "conventional-changelog-cli": "^2.0.31",
     "glob-all": "^3.1.0",
     "husky": "^4.2.3",
     "istanbul": "^0.4.5",
